# certified_variables

./: .gitignore  Cargo.toml  README.md  dfx.json  mops.toml
src/cert_var_backend/: Cargo.toml  cert_var_backend.did
src/cert_var_backend/src/: lib.rs
src/cert_var_mo/: main.mo
src/cert_var_rust/: Cargo.toml
src/cert_var_rust/src/: lib.rs
src/cert_verify/: Cargo.toml
src/cert_verify/src/: main.rs
src/cert_verify_js/: index.js  package-lock.json  package.json
src/cert_verify_rust/: Cargo.toml
src/cert_verify_rust/src/: main.rs
