[package]
name = "cert_verify"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = {version = "1.3.2", features = ["derive"]}
candid = "0.10.8"
candid_parser = "0.1.4"
futures = "0.3.30"
ic-agent = "0.36.0"
ic-certificate-verification = "2.4.0"
ic-certification = "2.5.0"
rand = "0.8.5"
serde = "1.0.203"
serde_cbor = "0.11.2"
tokio = { version = "1.38.0", features = ["macros"] }
